sostituiti i div in dei span all interno dei li di sidebar-nav. w3c non me lo validava.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
                         <li>
                             <input type="radio" name="side" id="home" value="home" checked>
                             <label for="home">
-                                <div class="image"><img src="img/home.svg" alt="home"></div>
+                                <span class="image"><img src="img/home.svg" alt="home"></span>
                                 <span class="visibility">Home</span>
                             </label>
                         </li>
                         <li>
                             <input type="radio" name="side" id="search" value="search">
                             <label for="search">
-                                <div class="image"><img src="img/search.svg" alt="search"></div>
+                                <span class="image"><img src="img/search.svg" alt="search"></span>
                                 <span class="visibility">Cerca</span>
                             </label>
                         </li>
                         <li>
                             <input type="radio" name="side" id="library" value="library">
                             <label for="library">
-                                <div class="image"><img src="img/libreria.svg" alt="libreria"></div>
+                                <span class="image"><img src="img/libreria.svg" alt="libreria"></span>
                                 <span class="visibility">La tua libreria</span>
                             </label>
                         </li>
