aggiunto effetto hover sul logo

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="upper-content d-flex">
             <div id="sidebar" class="p-inline-sm text-smaller d-flex flex-col content-between">
                 <div class="sidebar-top d-flex flex-col gap-md">
-                    <div class="logo debug">
+                    <a href="#" class="logo debug">
                         <img class="logo-big visibility" src="img/logo.svg" alt="logo">
                         <img class="logo-small" src="img/logo-small.svg" alt="logo small">
-                    </div>
+                    </a>
                     <ul class="sidebar-nav d-flex flex-col gap-sm debug">
                         <li>
                             <input type="radio" name="side" id="home" value="home" checked>
