--- a/index.html
+++ b/index.html
@@ -284,7 +284,10 @@
                     </div>
                 </div>
                 <div class="icons d-flex flex-wrap gap-sm">
-                    <i class="fa-regular fa-heart"></i>
+                    <input type="checkbox" name="heart" id="heart" value="heart" >
+                    <label for="heart">
+                        <i class="fa-regular fa-heart"></i>
+                    </label>
                     <i class="fa-regular fa-folder"></i>
                 </div>
             </div>
@@ -307,7 +310,9 @@
                 </div>
             </div>
             <div class="right d-flex flex-row-reverse gap-xs items-center">
-                <div class="bar"></div>
+                <div class="bar-container">
+                    <div class="bar"></div>
+                </div>
                 <div class="d-flex gap-sm flex-wrap flex-row-reverse">
                     <i class="fa-solid fa-volume-low"></i>
                     <i class="fa-solid fa-display"></i>
