animazione slider sulle cards di recents. animazione stop all hover sulla recents card list. animazione bounce all hover su una singola card (quest' ultima BUGGATA)

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <div class="upper-content d-flex">
             <div id="sidebar" class="p-inline-sm text-smaller d-flex flex-col content-between">
                 <div class="sidebar-top d-flex flex-col gap-md">
-                    <a href="#" class="logo debug">
+                    <a href="#" class="logo">
                         <img class="logo-big visibility" src="img/logo.svg" alt="logo">
                         <img class="logo-small" src="img/logo-small.svg" alt="logo small">
                     </a>
-                    <ul class="sidebar-nav d-flex flex-col gap-sm debug">
+                    <ul class="sidebar-nav d-flex flex-col gap-sm">
                         <li>
                             <input type="radio" name="side" id="home" value="home" checked>
                             <label for="home">
@@ -129,9 +129,10 @@
                         <div class="category-title">
                             <h2>Recently played</h2>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
-                            <li class="card">
-                                <a href="#">
+                        <ul class="card-list d-flex flex-wrap text-center"
+                            style="--quantity: 6">
+                            <li class="card inv" style="--position: 1">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/metal_lifting.jpg" alt="Heavy Metal">
                                         <i class="fa-regular fa-circle-play"></i>
@@ -142,8 +143,8 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="card">
-                                <a href="#">
+                            <li class="card inv" style="--position: 2">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/stranger.jpeg" alt="stranger Things">
                                         <i class="fa-regular fa-circle-play"></i>
@@ -157,8 +158,8 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="card">
-                                <a href="#">
+                            <li class="card inv" style="--position: 3">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/aquietplace.jpeg" alt="A quiet place">
                                         <i class="fa-regular fa-circle-play"></i>
@@ -169,8 +170,8 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="card">
-                                <a href="#">
+                            <li class="card inv" style="--position: 4">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/split.jpeg" alt="Split">
                                         <i class="fa-regular fa-circle-play"></i>
@@ -181,8 +182,8 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="card">
-                                <a href="#">
+                            <li class="card inv" style="--position: 5">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/cure.jpeg" alt="A cure for wellness">
                                         <i class="fa-regular fa-circle-play"></i>
@@ -193,8 +194,8 @@
                                     </div>
                                 </a>
                             </li>
-                            <li class="card">
-                                <a href="#">
+                            <li class="card inv" style="--position: 6">
+                                <a href="#" class="anim">
                                     <div class="card-image">
                                         <img src="img/sinister.jpeg" alt="Sinister">
                                         <i class="fa-regular fa-circle-play"></i>
