migliorato l'hover sulle cards animate. Ho sfruttato vari selettori per utilizzare in maniera efficace l'hover direttamente sugli stessi siblings

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                             <h2>Creato per John Doe</h2>
                             <h5>Più ascolti, più accurati saranno i suggerimenti</h5>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
+                        <ul class="card-list d-flex flex-wrap gap-md text-center">
                             <li class="card">
                                 <a href="#">
                                     <div class="card-image">
@@ -245,7 +245,7 @@
                             <h2>Artisti più popolari</h2>
                             <h5>Più ascolti, più accurati saranno i suggerimenti</h5>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center">
+                        <ul class="card-list d-flex flex-wrap gap-md text-center">
                             <li class="card">
                                 <a href="#">
                                     <div class="card-image">
