--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                         <div class="category-title">
                             <h2>Recently played</h2>
                         </div>
-                        <ul class="card-list d-flex flex-wrap gap-sm text-center" style="--quantity: 6">
+                        <ul class="card-list d-flex flex-wrap text-center" style="--quantity: 6">
                             <li class="card inv" style="--position: 1">
                                 <a href="#" class="anim">
                                     <div class="card-image">
